# arxiv_intelligence_ner_ws

./: .gitlab-ci.yml  Dockerfile  README.md  config.cfg  main.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: pylint.yml  pytest.yml
config/: config.ini
owl/: template-arxiv-intelligence.owl
tests/: client.py  conftest.py  test_factory.py  test_performances.py  test_router.py
tests/reference_json/: 2203.07507.pdf.json  2203.07676.pdf.json  2203.07782.pdf.json  2203.07993.pdf.json  2203.07998.pdf.json  2203.08015.pdf.json  2203.08111.pdf.json  2203.08617.pdf.json  2203.10451.pdf.json  2203.10525.pdf.json  result_2203.07507.pdf.json  result_2203.07676.pdf.json  result_2203.07782.pdf.json  result_2203.07993.pdf.json  result_2203.07998.pdf.json  result_2203.08015.pdf.json  result_2203.08111.pdf.json  result_2203.08617.pdf.json  result_2203.10451.pdf.json  result_2203.10525.pdf.json
tests/services/: test_api.py  test_api_service.py
web_service/: __init__.py  router.py
web_service/common/: __init__.py  base.py  config.py
web_service/entities/: __init__.py  article_model.py  document_entity.py  message_entity.py  message_model.py  named_entity.py  pdf_entity.py
web_service/services/: __init__.py  api.py  api_service.py  aws_comprehend_ner_service.py  ner_interface.py  ontology_service.py  spacy_ner_service.py
web_service/swagger/: document.yml  document_content.yml  document_metadata.yml  document_upload.yml  get_document_upload.yml  hello_world.yml  index.yml  post_document_upload.yml
web_service/templates/: index.html
