[metadata]
name = arxiv_intelligence_ner_ws
name_long = arXiv Intelligence NER Web Service
version = 0.9.0
url = https://github.com/snook9/arxiv_intelligence_ner_ws
license = MIT
description = Web service specialized in Named Entity Recognition (NER), in Natural Language Processing (NLP)
long_description = file: README.md
long_description_content_type = text/md

[options]
packages = find:
include_package_data = true
install_requires =
    Flask
    SQLAlchemy
    PyPDF2
    pdftotext

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    web_service
